namespace Poker.Enumerations
{
    public enum ActionType
    {
        Fold,
        Call,
        Raise,
        Check,
        Bet,
        AllIn
    }
}