namespace Poker.Enumerations
{
    public enum BettingRoundType
    {
        PreFlop,
        Flop,
        Turn,
        River,
        Showdown
    }
}