namespace Poker.Enumerations
{
    public enum CardValue
    {
        Two = 2, Three, Four, Five, Six, Seven,
        Eight, Nine, Ten, Jack, Queen, King, Ace
    }
}