namespace Poker.Enumerations
{
    public enum HandRank
    {
        No_Pair=1,
        One_Pair,
        Two_Pairs,
        Three_Pairs,
        Three_of_a_Kind,
        Straight,
        Flush,
        Full_House,
        Four_of_a_Kind,
        Straight_Flush, 
        Royal_Flush
    }
}