namespace Poker.Enumerations
{
    public enum Suit
    {
        Hearts, Spades, Diamonds, Clubs
    }
}