namespace Poker.Enumerations
{
    public enum Position
    {
        None, 
        Dealer,
        SmallBlind,
        BigBlind,
        EarlyPosition,
        MiddlePosition,
        LatePosition
    }
}